ir/ir_serialization.h

// Binary Serialization Functions
IRBuffer* ir_serialize_binary(IRComponent* root);
IRComponent* ir_deserialize_binary(IRBuffer* buffer);
bool ir_write_binary_file(IRComponent* root, const char* filename);
IRComponent* ir_read_binary_file(const char* filename);
// JSON Serialization Functions (for debugging/tooling)
char* ir_serialize_json(IRComponent* root);
IRComponent* ir_deserialize_json(const char* json_string);
bool ir_write_json_file(IRComponent* root, const char* filename);
IRComponent* ir_read_json_file(const char* filename);
// JSON v2 Serialization (complete property coverage)
char* ir_serialize_json_v2(IRComponent* root);
bool ir_write_json_v2_file(IRComponent* root, const char* filename);
// JSON v2 Deserialization
IRComponent* ir_deserialize_json_v2(const char* json_string);
IRComponent* ir_read_json_v2_file(const char* filename);
// Buffer Management
IRBuffer* ir_buffer_create(size_t initial_capacity);
IRBuffer* ir_buffer_create_from_file(const char* filename);
void ir_buffer_destroy(IRBuffer* buffer);
bool ir_buffer_write(IRBuffer* buffer, const void* data, size_t size);
bool ir_buffer_read(IRBuffer* buffer, void* data, size_t size);
bool ir_buffer_seek(IRBuffer* buffer, size_t position);
size_t ir_buffer_tell(IRBuffer* buffer);
size_t ir_buffer_size(IRBuffer* buffer);
// Validation Functions
bool ir_validate_binary_format(IRBuffer* buffer);
bool ir_validate_json_format(const char* json_string);